# deci-player

./: Cargo.toml  LICENSE  README.md  config.toml  to.sh
music_list/1/: jp.lrc  zh.lrc
music_list/2/: jp.lrc  zh.lrc
src/: audio.rs  config.rs  handle.rs  main.rs  view.rs
src/view/: utils.rs
